--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="home bd-grid" id="home">
         <div class="home__data">
           <h1 class="home__title">
-            Smart<br /><span class="home__title-color">Disease Prediction</span
+            S<br /><span class="home__title-color">Disease Prediction</span
             ><br />
             <p class="slogan">Care for your health with a simple Self-Check</p>
           </h1>
