--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>Portfolio website complete</title>
+    <title>Smart Disease Prediction</title>
   </head>
 
   <body>
@@ -103,9 +103,9 @@
           <div class="work__img">
             <p>
               <img src="assets/img/heart disease.png" alt="" />
-              <a href="/Personal portfolio/heart.html"
+              <a href="./heart.html"
                 ><button
-                  style="height: 40px; width: 100px"
+                  style="height: 40px; width: 320px;border:none"
                   type="button"
                   class="btn btn-dark link"
                 >
@@ -116,9 +116,9 @@
           </div>
           <div class="work__img">
             <img src="assets/img/Diabetes.png" alt="" />
-            <a href="/Personal portfolio/diabetes.html">
+            <a href="./diabetes.html">
               <button
-                style="height: 40px; width: 100px"
+                style="height: 40px; width: 320px;border:none"
                 type="button"
                 class="btn btn-dark link"
               >
@@ -128,9 +128,9 @@
           </div>
           <div class="work__img">
             <img src="assets/img/kidney disease.png" alt="" />
-            <a href="/Personal portfolio/kidney.html">
+            <a href="./kidney.html">
               <button
-                style="height: 40px; width: 100px"
+                style="height: 40px; width: 320px;border:none"
                 type="button"
                 class="btn btn-dark link"
               >
@@ -140,9 +140,9 @@
           </div>
           <div class="work__img">
             <img src="assets/img/Liver.png" alt="" />
-            <a href="/Personal portfolio/liver.html">
+            <a href="./liver.html">
               <button
-                style="height: 40px; width: 100px"
+                style="height: 40px; width: 320px;border:none"
                 type="button"
                 class="btn btn-dark link"
               >
