--- a/index.html
+++ b/index.html
@@ -150,6 +150,42 @@
               </button></a
             >
           </div>
+          <div class="work__img">
+            <img src="assets/img/cancer.png" alt="" />
+            <a href="./cancer.html">
+              <button
+                style="height: 40px; width: 320px;border:none"
+                type="button"
+                class="btn btn-dark link"
+              >
+                Check Now
+              </button></a
+            >
+          </div>
+          <div class="work__img">
+            <img src="assets/img/Malaria Disease.png" alt="" />
+            <a href="./malaria.html">
+              <button
+                style="height: 40px; width: 320px;border:none"
+                type="button"
+                class="btn btn-dark link"
+              >
+                Check Now
+              </button></a
+            >
+          </div>
+          <div class="work__img">
+            <img src="assets/img/pneumonia.png" alt="" />
+            <a href="./pneumonia.html">
+              <button
+                style="height: 40px; width: 320px;border:none"
+                type="button"
+                class="btn btn-dark link"
+              >
+                Check Now
+              </button></a
+            >
+          </div>
         </div>
       </section>
       <!--===== FAQ =====-->
