home link added

--- a/liver.html
+++ b/liver.html
@@ -21,10 +21,12 @@
     />
     <style>
       * {
-        margin: 0;
+        margin: auto;
         padding: 0;
         font-family: "Josefin Sans", sans-serif;
       }
+      h1 {text-align: center;}
+      h2 {text-align: center;}
       html,
       body,
       header,
@@ -43,9 +45,10 @@
     <header>
       <!--Mask-->
       <div id="intro" class="container-fluid view">
-        <h1 class="text-center text-capitalize pt-5">
+        <h1 class="text-primary">Liver Disease Prediction</h1>
+        <h2>
           Know your chances of getting a liver disease in one Click!
-        </h1>
+        </h2>
         <hr class="w-75 mx-auto pt-5" />
         <div class="row mb-5">
           <div class="col-lg-6 col-md-6 col-12">
@@ -133,7 +136,9 @@
                   placeholder="Enter the Albumin and Globulin Ratio"
                 />
               </div>
-              <button type="submit" class="btn btn-danger">Predict</button>
+              <button type="submit" class="btn btn-primary">Predict</button>
+              <a class="btn btn-primary" href="index.html" role="button"><i class="fa fa-home"></i> Home</a>
+              <p></p>
             </form>
           </div>
         </div>
@@ -141,22 +146,5 @@
       <!--/.Mask-->
     </header>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
