--- a/heart.html
+++ b/heart.html
@@ -14,6 +14,8 @@
     padding:0;
     font-family: 'Josefin Sans', sans-serif;
     }
+    h1 {text-align: center;}
+    h2 {text-align: center;}
     html,
     body,
     header,
@@ -32,7 +34,8 @@
     <header>
       <!--Mask-->
       <div id="intro" class="container-fluid view ">
-        <h1 class="text-center text-capitalize pt-5">Know your chances of getting a heart disease in one Click!</h1>
+        <h1 class="text-primary">Heart Disease Prediction</h1>
+        <h2>Know your chances of getting a heart disease in one Click!</h2>
         <hr class="w-75 mx-auto pt-5">
         <div class="row mb-5">
           <div class="col-lg-6 col-md-6 col-12">
@@ -87,7 +90,9 @@
                   <option value="0">No</option>
                 </select>
               </div>
-              <button type="submit" class="btn btn-danger">Predict</button>
+              <button type="submit" class="btn btn-primary">Predict</button>
+              <a class="btn btn-primary" href="index.html" role="button"><i class="fa fa-home"></i> Home</a>
+              <p></p>
             </form>
           </div>
         </div>
