--- a/kidney.html
+++ b/kidney.html
@@ -21,10 +21,12 @@
     />
     <style>
       * {
-        margin: 0;
+        margin: auto;
         padding: 0;
         font-family: "Josefin Sans", sans-serif;
       }
+      h1 {text-align: center;}
+      h2 {text-align: center;}
       html,
       body,
       header,
@@ -44,9 +46,10 @@
     <header>
       <!--Mask-->
       <div id="intro" class="container-fluid view">
-        <h1 class="text-center text-capitalize pt-5">
+        <h1 class="text-primary">Kidney Disease Prediction</h1>
+        <h2>
           Know your chances of getting a kidney disease in one Click!
-        </h1>
+        </h2>
         <hr class="w-75 mx-auto pt-5" />
         <div class="row mb-5">
           <div class="col-lg-6 col-md-6 col-12">
@@ -137,7 +140,9 @@
                 />
               </div>
 
-              <button type="submit" class="btn btn-danger">Predict</button>
+              <button type="submit" class="btn btn-primary">Predict</button>
+              <a class="btn btn-primary" href="index.html" role="button"><i class="fa fa-home"></i> Home</a>
+              <P></P>
             </form>
           </div>
         </div>
