--- a/malaria.html
+++ b/malaria.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        h1 {text-align: center;}
+        h5 {text-align: center;}
+
+    </style>
     <title>Cancer Prediction</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>    
 <body>
 
-<h1>Malaria Prediction<h1>
+<h1 class="text-primary">Malaria Prediction<h1>
 <h5>Please upload the image of the cell</h5>
 <form class="p-3 text-center" action='/',methods="post" enctype="">
     <input class="form-control" type="file" name="imagefile">
-    <input class="btn btn-primary mt-3" type="submit" value="Predict Images">
+    <input class="btn btn-primary mt-3" type="submit" value="Predict">
+    <p></p>
+    <a class="btn btn-primary" href="index.html" role="button"><i class="fa fa-home"></i>  Home</a>
 </form>
 </body>
 </html>
