--- a/liver.html
+++ b/liver.html
@@ -51,6 +51,9 @@
         </h2>
         <hr class="w-75 mx-auto pt-5" />
         <div class="row mb-5">
+          <div class="col-lg-6 col-md-6 col-12 my-auto">
+            <img src="../assets/img/Cover Photo/liver.jpg" class="float-left">
+          </div>
           <div class="col-lg-6 col-md-6 col-12">
             <form action="{{ url_for('predict')}}" method="post">
               <div class="form-group">
