--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="sr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,6 +17,7 @@
     ></script>
 
     <title>Smart Disease Prediction</title>
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
   </head>
 
   <body>
@@ -108,6 +109,7 @@
                   style="height: 40px; width: 320px;border:none"
                   type="button"
                   class="btn btn-dark link"
+                  
                 >
                   Check Now
                 </button></a
@@ -193,39 +195,57 @@
         <h2 class="section-title">FAQ</h2>
 
         <!-- faq question -->
-                <div class="layout">
-    <div class="accordion">
-      <div class="accordion__question">
-        <p>What is Smart Disease Prediction</p>
-  
-      </div>
-      <div class="accordion__answer">
-        <p>Description</p>
-      </div>
-    </div>
-    <div class="accordion">
-      <div class="accordion__question">
-        <p>How to take a self-Check?</p>
-  
-      </div>
-      <div class="accordion__answer">
-        <p>Click on the Check Now button & fill the require details. Click the Predict button. Find out your risk level with an in-depth report. Follow the advice for improving certain parts of your lifestyle and keep an eye out for the mentioned signs.</p>
-      </div>
-    </div>
-  
-    <div class="accordion">
-      <div class="accordion__question">
-        <p>Is Smart Disease Prediction is Secure?</p>
-      </div>
-      
-  
-      <div class="accordion__answer">
-        <p>
-          Definitely! Smart Disease Prediction Self-Checks are anonymous and reliable. None of your personal data is stored with us. The questions, answers, reports, advice, and signs are all verified by doctors. It’s free and secure for anyone to use.
-        </p>
-      </div>
-    </div>
-  </div>
+        <div class="accordion">
+          <div class="accordion-item">
+            <div class="accordion-item-header">
+              What is Smart Disease Prediction
+            </div>
+            <div class="accordion-item-body">
+              <div class="accordion-item-body-content">
+                Description
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <div class="accordion-item-header">
+              How to take a self-Check?
+            </div>
+            <div class="accordion-item-body">
+              <div class="accordion-item-body-content">
+                Click on the Check Now button & fill the require details. Click the Predict button. Find out your risk level with an in-depth report. Follow the advice for improving certain parts of your lifestyle and keep an eye out for the mentioned signs.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <div class="accordion-item-header">
+              Is Smart Disease Prediction is Secure?
+            </div>
+            <div class="accordion-item-body">
+              <div class="accordion-item-body-content">
+                Definitely! Smart Disease Prediction Self-Checks are anonymous and reliable. None of your personal data is stored with us. The questions, answers, reports, advice, and signs are all verified by doctors. It’s free and secure for anyone to use.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <div class="accordion-item-header">
+              What is HTTP?
+            </div>
+            <div class="accordion-item-body">
+              <div class="accordion-item-body-content">
+                HTTP, aka HyperText Transfer Protocol, is the underlying protocol used by the World Wide Web and this protocol defines how messages are formatted and transmitted, and what actions Web servers and browsers should take in response to various commands.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <div class="accordion-item-header">
+              What is CORS?
+            </div>
+            <div class="accordion-item-body">
+              <div class="accordion-item-body-content">
+                CORS, aka Cross-Origin Resource Sharing, is a mechanism that enables many resources (e.g. images, stylesheets, scripts, fonts) on a web page to be requested from another domain outside the domain from which the resource originated.
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
