--- a/pneumonia.html
+++ b/pneumonia.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
     <style>
         h1 {text-align: center;}
         h5 {text-align: center;}
