Add Team Section

--- a/heart.html
+++ b/heart.html
@@ -84,7 +84,7 @@
               
               <div class="form-group">
                 <label for="thalach">Maximum Heart Rate Achieved</label>
-                <input class="form-control" id="thalach" name = "thalach" required="required" >
+                <input class="form-control" type="number" id="thalach" name = "thalach" required="required" >
               </div>
 
               <div class="form-group">
